Concluindo regras.