@@ -5,26 +5,26 @@ import com.auth0.jwt.algorithms.Algorithm;
 import com.danillo.vagas.dto.AuthCandidateDTO;
 import com.danillo.vagas.dto.AuthResponseCandidateDTO;
 import com.danillo.vagas.dto.ProfileCandidateDTO;
+import com.danillo.vagas.models.candidate.ApplyJob;
 import com.danillo.vagas.models.candidate.Candidate;
 import com.danillo.vagas.models.candidate.exceptions.UserAlreadyExistsException;
 import com.danillo.vagas.models.candidate.exceptions.UserNotFoundException;
 import com.danillo.vagas.models.company.exceptions.CredentialNotFoundException;
 import com.danillo.vagas.models.job.exceptions.JobNotFoundException;
+import com.danillo.vagas.repositories.ApplyJobRepository;
 import com.danillo.vagas.repositories.CandidateRepository;
-import com.danillo.vagas.repositories.CompanyRepository;
 import com.danillo.vagas.repositories.JobRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import javax.naming.AuthenticationException;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Arrays;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -36,6 +36,7 @@ public class CandidateService {
     private final CandidateRepository candidateRepository;
     private final JobRepository jobRepository;
     private final PasswordEncoder passwordEncoder;
+    private final ApplyJobRepository applyJobRepository;
 
     public Candidate createCandidate(Candidate candidate) {
         this.candidateRepository
@@ -50,29 +51,28 @@ public class CandidateService {
     }
 
     public AuthResponseCandidateDTO authenticateCandidate(AuthCandidateDTO authCandidateDTO) throws AuthenticationException {
-        var candidate = this.candidateRepository.findByUsername(authCandidateDTO.username()).orElseThrow(() -> {
-            throw new CredentialNotFoundException("Invalid username or password");
-        });
+        var candidate = this.candidateRepository.findByUsername(authCandidateDTO.username()).orElseThrow(() ->
+                new CredentialNotFoundException("Invalid username or password")
+        );
 
         var pw = this.passwordEncoder.matches(authCandidateDTO.password(), candidate.getPassword());
 
-        if(!pw)throw new AuthenticationException();
+        if (!pw) throw new AuthenticationException();
 
         Algorithm algorithm = Algorithm.HMAC256(secretKey);
         var token = JWT.create()
                 .withIssuer("vagas")
                 .withExpiresAt(Instant.now().plus(Duration.ofHours(2)))
                 .withSubject(candidate.getId().toString())
-                .withClaim("roles", Arrays.asList("CANDIDATE"))
+                .withClaim("roles", List.of("CANDIDATE"))
                 .sign(algorithm);
 
         return new AuthResponseCandidateDTO(token);
     }
 
-    public ProfileCandidateDTO profileCandidate(Long id){
-        var candidate = this.candidateRepository.findById(id).orElseThrow(()->{
-            throw new UsernameNotFoundException("User not found");
-        });
+    public ProfileCandidateDTO profileCandidate(Long id) {
+        var candidate = this.candidateRepository.findById(id).orElseThrow(() ->
+                new UsernameNotFoundException("User not found"));
         ProfileCandidateDTO candidateDTO = new ProfileCandidateDTO();
 
         BeanUtils.copyProperties(candidate, candidateDTO);
@@ -80,9 +80,15 @@ public class CandidateService {
         return candidateDTO;
     }
 
-    public void applyJob(Long idCandidate, Long idJob){
+    public ApplyJob applyJob(Long idCandidate, Long idJob) {
         this.candidateRepository.findById(idCandidate).orElseThrow(() -> new UserNotFoundException("User not found"));
 
-        this.jobRepository.findById(idJob).orElseThrow(()-> new JobNotFoundException("Job not found"));
+        this.jobRepository.findById(idJob).orElseThrow(() -> new JobNotFoundException("Job not found"));
+
+        var applyJob = ApplyJob.builder()
+                .candidateId(idCandidate)
+                .jobId(idJob).build();
+
+        return this.applyJobRepository.save(applyJob);
     }
 }
